<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jobber</string>
    <string name="login_activity_google_signin">Google Login</string>
    <string name="login_activity_bienvenue">Bienvenue</string>
    <string name="login_activity_sinscrire">Créer un compte</string>
    <string name="login_activity_sign_in_with_google">Sign in with Google</string>
    <string name="login_signin_activity_email_txtview">Email</string>
    <string name="login_signin_activity_password">Password</string>
    <string name="login_activity_button_text">Se connecter</string>
    <string name="login_activity_signin_button_text">S\'inscrire</string>
    <string name="login_activity_signin_button_finaliser">Créer le compte</string>
    <string name="login_activity_password_forgot">Mot de passe oublié ?</string>
    <string name="login_activity_password_hint">Your password</string>
    <string name="signin_activity_email_hint">Exemple : email@provider.com</string>
    <string name="backbutton_text">Retour</string>
    <string name="back">Back</string>
    <string name="calendar_button">📅</string>
    <string name="enter_uour_name">Enter your name</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (dd/mm/yyyy)</string>
    <string name="entreprise">Entreprise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_candidature">Candidature +</string>
    <string name="enter_job_title">Titre de l\'offre</string>
    <string name="date_candidature">Date de la candidature</string>
    <string name="lieu_du_poste">Lieu du poste</string>
    <string name="enter_notes">Notes sur la candidature</string>
    <string name="candidature_details_liste_contacts">Contacts lié à la candidature :</string>
    <string name="candidature_details_liste_appels">Appels lié à la candidature :</string>
    <string name="enter_company_name">Nom de l\'entreprise</string>
    <string name="enter_description">Description du poste</string>
    <string name="submit_candidature">Ajouter la candidature</string>
    <string name="est_spontannee">Spontannée ?</string>

    <string-array name="candidature_states">
        <item>Candidatée et en attente</item>
        <item>Relancée et en attente</item>
        <item>En attente après entretien</item>
        <item>Aucune réponse</item>
        <item>À relancer</item>
        <item>Erreur</item>
        <item>Acceptée</item>  <!-- Nouvel état ajouté -->
    </string-array>


    <array name="type_poste_options">
        <item>Type d\'emploi</item>
        <item>CDD</item>
        <item>CDI</item>
        <item>Freelance</item>
        <item>Intérim</item>
        <item>Alternance</item>
    </array>
    <string-array name="types_entretien">
        <item>Présentiel</item>
        <item>Visioconférence</item>
    </string-array>
    <string-array name="modes_entretien">
        <item>RH</item>
        <item>Technique</item>
        <item>Autres</item>
    </string-array>
    <string-array name="types_relance">
        <item>Présentiel</item>
        <item>Visioconférence</item>
    </string-array>
    <string-array name="modes_relance">
        <item>RH</item>
        <item>Technique</item>
        <item>Autres</item>
    </string-array>
    <array name="plateforme_options">
        <item>Plateforme utilisée</item>
        <item>HelloWork</item>
        <item>LinkedIn</item>
        <item>Indeed</item>
        <item>Welcome To The Jungle</item>
        <item>SpaceMonk</item>
        <item>Jobteaser</item>
        <item>Monster</item>
        <item>Keljob</item>
        <item>RegionJob</item>
        <item>bretagne-alternance</item>
        <item>Ouest-France Emploi</item>
        <item>Meteojob</item>
        <item>Jooble</item>
        <item>APEC</item>
        <item>Talent.io</item>
        <item>Téléphone</item>
        <item>Email</item>
        <item>Sur place</item>
        <item>WhatsApp</item>
        <item>Autre</item>
    </array>
    <string-array name="view_options">
        <item>Jour</item>
        <item>5 jours</item>
        <item>Mois</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="candidature_details_liste_entretiens">Entretiens de la candidatures</string>
    <string name="candidature_details_liste_relances">Relance liée à la candidature</string>
    <string name="plateforme_prompt">Plateforme utilisée</string>
    <string name="contact_prompt">Contact de la relance</string>
    <string name="entreprise_prompt">Entreprise de la relance</string>
    <string name="search">Rechercher\n</string>
    <string name="default_web_client_id">934474585103-escr2k2tq20djeindi6e21u4eb0dl49j.apps.googleusercontent.com</string>
</resources>