<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Titre de l'offre -->
    <EditText
        android:id="@+id/titreOffreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_job_title" />

    <!-- Nom de l'entreprise -->
    <EditText
        android:id="@+id/entrepriseNomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_company_name" />

    <EditText
        android:id="@+id/etDateCandidature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_candidature"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none" />
    <EditText
        android:id="@+id/lieuPosteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lieu_du_poste"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none" />

    <CheckBox
        android:id="@+id/cbEstSpontannee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/est_spontannee"/>
    <!-- Type d'emploi -->
    <Spinner
        android:id="@+id/typeEmploiSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <!-- Plateforme utilisée -->
    <Spinner
        android:id="@+id/plateformeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <!-- Description -->
    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <!-- Notes -->
    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_notes"
        android:inputType="textMultiLine"
        android:minLines="3" />

    <!-- Bouton Soumettre -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit_candidature" />

</LinearLayout>
